# drf-practice

./: pyproject.toml
config/: settings.py  urls.py
quickstart/: serializers.py  views.py
snippets/: models.py  permissions.py  serializers.py  urls.py  views.py
snippets/migrations/: 0001_initial.py  0002_rename_linesnos_snippet_linenos.py  0003_alter_snippet_linenos.py
