[tool.poetry]
name = "drf-practice"
version = "0.1.0"
description = ""
authors = ["chen weichen <newsforcwc@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
djangorestframework = "^3.15.2"
pygments = "^2.18.0"
drf-yasg = "^1.21.8"


[tool.poetry.group.dev.dependencies]
httpie = "^3.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
